fix lives layout issue

--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -340,6 +340,7 @@ h1 {
 .lives {
     display: block;
     clear: both;
+    overflow: hidden;
 
     .lives-grid {
         margin: 0;
